# qalam

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
src/: cli.rs  config.rs  llm.rs  main.rs  scanner.rs
src/commands/: audit.rs  breakdown.rs  completions.rs  context.rs  doctor.rs  edit.rs  export.rs  git_hook.rs  graph.rs  hook.rs  init.rs  mod.rs  rfc.rs  serve.rs  skill.rs  spec.rs  status.rs  testplan.rs  ui.rs
