[package]
name = "qalam"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6"
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
